--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
-numpy
-joblib
+streamlit==1.36.0
+numpy==1.26.4
+joblib==1.4.2
 tensorflow==2.15.0
-scikit-learn
-torch
-transformers
-sentencepiece
-sumy
-nltk
+scikit-learn==1.4.2
+torch==2.2.0
+transformers==4.41.2
+sentencepiece==0.2.0
+sumy==0.11.0
+nltk==3.8.1
